Fixed all tests which were failing after devise install. Corrected logic check to display correct tweets on tweets#index

--- a/spec/fixtures/tweets.yml
+++ b/spec/fixtures/tweets.yml
@@ -3,3 +3,9 @@ testTweet:
   user_id: 1
   body: "Message Body"
   title: "Message Title"
+
+secondaryTweet:
+  id: 2
+  user_id: 2
+  body: "2nd Message Body"
+  title: "2nd Message Title"
