--- a/spec/fixtures/users.yml
+++ b/spec/fixtures/users.yml
@@ -2,3 +2,8 @@ testUser:
   id: 1
   email: 'user@test.com'
   password: 'password'
+
+secondaryUser:
+  id: 2
+  email: 'user2@test.com'
+  password: 'password'
