--- a/spec/fixtures/tweets.yml
+++ b/spec/fixtures/tweets.yml
@@ -1,10 +1,10 @@
-testTweet:
+test_tweet:
   id: 1
   user_id: 1
   body: "Message Body"
   title: "Message Title"
 
-secondaryTweet:
+secondary_tweet:
   id: 2
   user_id: 2
   body: "2nd Message Body"
